--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <p>I am glad that you click into my website :) </p>
 
 <ul>
-  <li> <a href="https://www.redbubble.com/people/tampler/shop?asc=u&ref=account-nav-dropdown"> My redbubble shop website</a> </li>
-  <li> <a href="https://www.zazzle.com/store/tampler"> My zazzle shop website</a> </li>
+  <li> <a href="http://gestyy.com/eo6OhG"> My redbubble shop website</a> </li>
+  <li> <a href="http://gestyy.com/eo6Ojo"> My zazzle shop website</a> </li>
+  <li> <a href="http://gestyy.com/eo6Ol3"> My dribbble </a> </li>
+  <li> <a href="http://gestyy.com/eo6OxZ"> My instagram </a> </li>
+  <li> <a href="http://gestyy.com/eo6Obt"> My Facebook </a> </li>
 </ul>
