--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<img src="F:\download\my photo\TAMPLER.png">
 <p>Hello there </p>
 <p>Here is Tampler shop website. </p>
 <p>I am glad that you click into my website :) </p>
