--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-![image] (https://github.com/ProTampler/Tampler1.github.io/blob/main/TAMPLER.png)
+<img src ="F:\download\my photo\Tampler(1).png>
 <p>Hello there </p>
 <p>Here is Tampler shop website. </p>
 <p>I am glad that you click into my website :) </p>
