--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src ="F:\download\my photo\Tampler(1).png>
+<img src ="Tampler (1).png">
 <p>Hello there </p>
 <p>Here is Tampler shop website. </p>
 <p>I am glad that you click into my website :) </p>
