--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <p>I am glad that you click into my website :) </p>
 
 <ul>
-  <li> <a href="http://gestyy.com/eo6OhG"> My redbubble shop website</a> </li>
-  <li> <a href="http://gestyy.com/eo6Ojo"> My zazzle shop website</a> </li>
-  <li> <a href="http://gestyy.com/eo6Ol3"> My dribbble </a> </li>
-  <li> <a href="http://gestyy.com/eo6OxZ"> My instagram </a> </li>
-  <li> <a href="http://gestyy.com/eo6Obt"> My Facebook </a> </li>
+  <li> <a href="http://adfoc.us/6950091"> My redbubble shop website</a> </li>
+  <li> <a href="http://adfoc.us/69500980979453"> My zazzle shop website</a> </li>
+  <li> <a href="http://adfoc.us/69500980979455"> My dribbble </a> </li>
+  <li> <a href="http://adfoc.us/69500980979459"> My instagram </a> </li>
+  <li> <a href="http://adfoc.us/69500980979463"> My Facebook </a> </li>
 </ul>
