--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head>
+  <head bgcolor=yellow>
     <meta http-equiv="refresh" content="7; url='Lokscloud.nat123.cc:18108'" />
   </head>
   <body>
