--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head bgcolor=yellow>
-    <meta http-equiv="refresh" content="7; url='Lokscloud.nat123.cc:18108'" />
+    <meta http-equiv="refresh" content="7; url='http://login8080.nat123.cc'" />
   </head>
   <body>
-    <p>Please follow <a href="Lokscloud.nat123.cc:18108">this link</a>.</p>
+    <p>Please follow <a href="http://login8080.nat123.cc">this link</a>.</p>
   </body>
 </html>
