--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <meta http-equiv="refresh" content="3; url='http://login8080.nat123.cc'" />
   </head>
   <body>
-    <p>Please follow <a href="http://login8080.nat123.cc">this link</a>.</p>
+    <p>Wait for three second or follow <a href="http://login8080.nat123.cc">this link</a>.</p>
   </body>
 </html>
