--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="3; url='http://login8080.nat123.cc'" />
+    <meta http-equiv="refresh" content="3; url='https://ssur.cc/8080'" />
   </head>
   <body>
-    <p>Wait for three second or follow <a href="http://login8080.nat123.cc">this link</a>.</p>
+    <p>Wait for three second or follow <a href="https://ssur.cc/8080">this link</a>.</p>
   </body>
 </html>
