--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <meta http-equiv="refresh" content="3; url='https://ssur.cc/8080'" />
   </head>
   <body>
-    <p>Wait for three second or follow <a href="https://ssur.cc/8080">this link</a>.</p>
+    <p>Wait for three second or press <a href="https://ssur.cc/8080">here</a>.</p>
   </body>
 </html>
