--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="3; url='https://ssur.cc/8080'" />
+    <meta http-equiv="refresh" content="3; url='https://ssur.cc/zL7u9'" />
   </head>
   <body>
-    <p>Wait for three second or press <a href="https://ssur.cc/8080">here</a>.</p>
+    <p>Wait for three second or press <a href="https://ssur.cc/zL7u9">here</a>.</p>
   </body>
 </html>
