--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-</head>
-<frameset border="0" rows="100%,*" cols="100%" frameborder="no">
-  <frame name="TopFrame" scrolling="yes" noresize src="https://ssur.cc/zL7u9">
-  <frame name="BottomFrame" scrolling="no" noresize>
-  <noframes></noframes>
-</frameset>
+  <head>
+    Redireacting . . .
+    <meta http-equiv="refresh" content="3; url='https://ssur.cc/zL7u9'" />
+  </head>
+  <body>
+    <p>Wait for three second or press<a href="https://ssur.cc/zL7u9">here</a>.</p>
+  </body>
 </html>
