--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     Redireacting . . .
-    <meta http-equiv="refresh" content="3; url='https://ssur.cc/zL7u9'" />
+    <meta http-equiv="refresh" content="3; url='http://lokscloud.ath.cx:8080/login'" />
   </head>
   <body>
-    <p>Wait for three second or press<a href="https://ssur.cc/zL7u9">here</a>.</p>
+    <p>Wait for three second or press<a href="http://lokscloud.ath.cx:8080/login">here</a>.</p>
   </body>
 </html>
