--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     Redireacting . . .
-    <meta http-equiv="refresh" content="3; url='http://lokscloud.ath.cx:8080/login'" />
+    <meta http-equiv="refresh" content="3; url='http://www.lokscloud.xyz:8080/pages/rdto/'" />
   </head>
   <body>
-    <p>Wait for three second or press<a href="http://lokscloud.ath.cx:8080/login">here</a>.</p>
+    <p>Wait for three second or press<a href="http://www.lokscloud.xyz:8080/pages/rdto/">here</a>.</p>
   </body>
 </html>
